--- a/contact-page-master/index.html
+++ b/contact-page-master/index.html
@@ -80,7 +80,7 @@
 
     <!--Author Info-->
     <div class="author-info">
-      Coded by <a href="#">Your Name Here</a> | Challenge by
+      Coded by <a href="#">KS</a> | Challenge by
       <a href="https://www.devchallenges.io?ref=challenge" target="_blank"
         >devChallenges.io</a
       >.
